Stricter spacing; fix source order

--- a/stylesheets/_helpers.spacing.scss
+++ b/stylesheets/_helpers.spacing.scss
@@ -11,77 +11,77 @@ $position-units: (
     @each $id, $position in $position-units {
         @each $i in $spacing-amounts {
             .#{$position}t#{$i} {
-                #{$id}-top: #{$i}rem;
+                #{$id}-top: #{$i}rem !important;
             }
 
             @each $key, $breakpoint in $breakpoints {
                 .#{$key}-#{$position}t#{$i} {
                     @include media($breakpoint) {
-                        #{$id}-top: #{$i}rem;
+                        #{$id}-top: #{$i}rem !important;
                     }
                 }
             }
 
             .#{$position}r#{$i} {
-                #{$id}-right: #{$i}rem;
+                #{$id}-right: #{$i}rem !important;
             }
 
             @each $key, $breakpoint in $breakpoints {
                 .#{$key}-#{$position}r#{$i} {
                     @include media($breakpoint) {
-                        #{$id}-right: #{$i}rem;
+                        #{$id}-right: #{$i}rem !important;
                     }
                 }
             }
 
             .#{$position}b#{$i} {
-                #{$id}-bottom: #{$i}rem;
+                #{$id}-bottom: #{$i}rem !important;
             }
 
             @each $key, $breakpoint in $breakpoints {
                 .#{$key}-#{$position}b#{$i} {
                     @include media($breakpoint) {
-                        #{$id}-bottom: #{$i}rem;
+                        #{$id}-bottom: #{$i}rem !important;
                     }
                 }
             }
 
             .#{$position}l#{$i} {
-                #{$id}-left: #{$i}rem;
+                #{$id}-left: #{$i}rem !important;
             }
 
             @each $key, $breakpoint in $breakpoints {
                 .#{$key}-#{$position}l#{$i} {
                     @include media($breakpoint) {
-                        #{$id}-left: #{$i}rem;
+                        #{$id}-left: #{$i}rem !important;
                     }
                 }
             }
 
             .#{$position}v#{$i} {
-                #{$id}-top: #{$i}rem;
-                #{$id}-bottom: #{$i}rem;
+                #{$id}-top: #{$i}rem !important;
+                #{$id}-bottom: #{$i}rem !important;
             }
 
             @each $key, $breakpoint in $breakpoints {
                 .#{$key}-#{$position}v#{$i} {
                     @include media($breakpoint) {
-                        #{$id}-top: #{$i}rem;
-                        #{$id}-bottom: #{$i}rem;
+                        #{$id}-top: #{$i}rem !important;
+                        #{$id}-bottom: #{$i}rem !important;
                     }
                 }
             }
 
             .#{$position}h#{$i} {
-                #{$id}-left: #{$i}rem;
-                #{$id}-right: #{$i}rem;
+                #{$id}-left: #{$i}rem !important;
+                #{$id}-right: #{$i}rem !important;
             }
 
             @each $key, $breakpoint in $breakpoints {
                 .#{$key}-#{$position}h#{$i} {
                     @include media($breakpoint) {
-                        #{$id}-left: #{$i}rem;
-                        #{$id}-right: #{$i}rem;
+                        #{$id}-left: #{$i}rem !important;
+                        #{$id}-right: #{$i}rem !important;
                     }
                 }
             }
@@ -132,8 +132,8 @@ $position-units: (
             // Horizontal Centering
             .#{$key}-center {
                 @include media($breakpoint) {
-                    #{$id}-left: auto;
-                    #{$id}-right: auto;
+                    #{$id}-left: auto !important;
+                    #{$id}-right: auto !important;
                 }
             }
         }
